1. Moved generic console classes to scala.console modules; 2. Reimplemented Scala console on new console classes.